Committing Register Feature

--- a/src/app/Component/register/register.component.html
+++ b/src/app/Component/register/register.component.html
@@ -6,6 +6,7 @@
             <b class="n">n</b>
             <b class="D">D</b>
             <b class="o">o</b>
+            <b class="oo">o</b>
         </div>
         <div class="InnerDiv">
             <div class="myDiv">
