--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<!--<app-register></app-register> -->
-<app-signin></app-signin>
+<!--<app-register></app-register>
+<app-signin></app-signin> -->
+<app-forgot></app-forgot>
