Committing Reset Feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--<app-register></app-register>
-<app-signin></app-signin> -->
-<app-forgot></app-forgot>
+<app-signin></app-signin> 
+<app-forgot></app-forgot> -->
+<app-reset></app-reset>
