--- a/src/app/Component/reset/reset.component.html
+++ b/src/app/Component/reset/reset.component.html
@@ -1,4 +1,3 @@
-<p>reset works!</p>
 <div class="OuterDiv">
     <div class="innerDiv">
         <div class="funDo">
@@ -12,27 +11,31 @@
         <div>
             <p class="span">Reset password</p>
         </div>
-        <div>
-            <div class="para">
-                Enter new password
+        <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
+            <div>
+                <div class="para">
+                    Enter new password
+                </div>
+                <mat-form-field appearance="outline" class="PasswordDiv">
+                    <mat-label>New password</mat-label>
+                    <input matInput placeholder="" formControlName="newpassword">
+                    <mat-error>Enter valid New password</mat-error>
+                </mat-form-field><br>
+                <span class="par">
+                  Use 8 or more characters with a mix of letters, numbers & symbols
+                </span>
+                <br>
+                <div class="para">
+                    Confirm new password
+                </div>
+                <mat-form-field appearance="outline">
+                    <mat-label>Confirm new password</mat-label>
+                    <input matInput placeholder="" formControlName="confirmnewPassword">
+                    <mat-error>Enter valid New password</mat-error>
+                </mat-form-field>
             </div>
-            <mat-form-field appearance="outline" class="PasswordDiv">
-                <mat-label>New password</mat-label>
-                <input matInput placeholder="">
-            </mat-form-field><br>
-            <div class="par">
-                <p>Use 8 or more characters with a mix of letters, numbers &<br> symbols</p>
-            </div>
-            <br>
-            <div class="para">
-                Confirm new password
-            </div>
-            <mat-form-field appearance="outline">
-                <mat-label>Confirm new password</mat-label>
-                <input matInput placeholder="">
-            </mat-form-field>
-        </div>
-        <button class="mat-raised-button">Save</button>
+            <button class="mat-raised-button">Save</button>
+        </form>
     </div>
 
 </div>
