--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,18 @@
-<!--<app-register></app-register>
-<app-signin></app-signin> 
-<app-forgot></app-forgot> -->
-<app-reset></app-reset>
+<!--
+<app-register></app-register>
+<app-signin></app-signin>
+<app-forgot></app-forgot>
+
+-->
+<app-reset></app-reset> 
+
+
+
+
+
+
+
+
+
+
+
