--- a/src/app/Component/register/register.component.scss
+++ b/src/app/Component/register/register.component.scss
@@ -7,10 +7,9 @@
 }
 .FirstInnerDiv{
     border: 1px solid rgb(230, 230, 230);
-    width: 55%;
     height: 85%;
     margin: 20px;
-    padding: 48px 40px;
+    padding: 40px 40px;
     padding-bottom: 36px;
     display:flex;
     flex-direction: column;
@@ -24,9 +23,10 @@
 .funDo{
     font-size: 30px;
     padding-top: 5px;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: row;
+    margin-left: 10px;
 }
 .F{
     color: #1a73e8;
@@ -77,7 +77,7 @@
 }
 .UserName{
   width: 100%;
-  height: 60px;    
+  height: 60px; 
 }
 .PasswordDiv{
    height: 60px;
@@ -90,13 +90,18 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 5px;
-    padding-right: 0px;
-    padding-top: 45px;
+    margin-top: 25px;
+    padding: 5px 0px;
+    padding-left: 0px;
 }
 .loginButton{
-    padding-right: 100px;
-    margin-right: 10px;
+    display: flex;
+    b{
+     padding: 12px 7px;
+    }
+     button{
+     margin: 0px;
+    }
 }
 .login{
     font-size: 16px;
@@ -116,9 +121,13 @@
     padding: 0;
     text-align: left;
     border: 0;
+    :hover{
+        background-color:#f2f5f9;
+        border-radius: 4px;
+    }
 }
 .NextButton{
-    margin-left: 100px;
+    margin-left: 205px;
 }
 .mat-raised-button{
     background-color:#1a73e8;
@@ -126,9 +135,41 @@
     padding: 12px 30px;
     border: none;
     border-radius: 4px;
+    box-shadow: none;
     cursor: pointer;
 }
 .para{
+    padding-top: 10px;
     margin-left: 10px;
     font-weight: 250;
+    font-size: 12px;
+}
+.buttondiv{
+    padding-bottom: 15px; 
+}
+.divButton{
+    font-size: 16px;
+    font-style: normal;
+    border-radius: 4px;
+    color: #1a73e8;
+    display: inline-block;
+    font-weight: 500;
+    letter-spacing: .25px;
+    outline: 0;
+    position: relative;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: inherit;
+    padding:0px;
+    text-align: left;
+    border: 0;
+    :hover{
+        background-color:#f2f5f9;
+        border-radius: 4px;
+    }
+}
+.paradiv{
+    display:flex;
+    align-items: center;
+    width: 70%;
 }
