Committing API Integration

--- a/src/app/Component/signin/signin.component.html
+++ b/src/app/Component/signin/signin.component.html
@@ -39,7 +39,7 @@
                 <div class="matButton">
                     <div class="Create">
                         <button class="Instead">
-                            <b routerLink="/signup">Create account</b>
+                            <b routerLink="/register">Create account</b>
                         </button>
                     </div>
                     <div class="next">
