--- a/src/app/Component/signin/signin.component.scss
+++ b/src/app/Component/signin/signin.component.scss
@@ -82,26 +82,29 @@
     align-items: center;
     margin-top: 25px;
     padding: 5px;
-    padding-left: 0px;
+    //padding-left: 0px;
+    border:2px solid red;
+    
 }
 .Instead{
     font-size: 14px;
     font-style: normal;
-    margin-bottom: 16px;
-    padding-top: 5px;
-    border-radius: 4px;
+    width: 150px;
+    //margin-bottom: 16px;
+    //padding-top: 5px;
+    //border-radius: 4px;
     color: #1a73e8;
-    display: inline-block;
-    letter-spacing: 0.1px;
+    //display: inline-block;
+    //letter-spacing: 0.1px;
     font-weight: 500;
-    outline: 0;
-    position: relative;
+    // outline: 0;
+    // position: relative;
     background-color: transparent;
     cursor: pointer;
     font-size: inherit;
-    padding: 0;
-    text-align: left;
-    border: 0;
+    //padding: 0;
+    //text-align: left;
+    //border: 0;
 }
 
 .next{
