--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <!--
-<app-register></app-register>
 <app-signin></app-signin>
+<app-register></app-register>
 <app-forgot></app-forgot>
-
--->
 <app-reset></app-reset> 
+-->
+
+<router-outlet></router-outlet>
+
+
+
 
 
 
