--- a/src/app/Component/trash/trash.component.html
+++ b/src/app/Component/trash/trash.component.html
@@ -1,1 +1,7 @@
-<p>trash works!</p>
+<!-- <div style="margin-top: 20px; margin: left 150px;">
+<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="20px">
+<app-display-note [notesArray]="trashList" (ChangeColorOfNote)="trash($event" (changeColorOfNote)="restoreNote($event"></app-display-note>
+</div>
+</div> -->
+
+<app-display-note [noteArr]="trashList"></app-display-note>
