--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,11 @@
 <app-register></app-register>
 <app-forgot></app-forgot>
 <app-reset></app-reset> 
+<app-icon></app-icon>
 -->
 
 <router-outlet></router-outlet>
+
 
 
 
