--- a/src/app/Component/dashboard/dashboard.component.html
+++ b/src/app/Component/dashboard/dashboard.component.html
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                     <div class="NoteDi">
-                        <div role="button" class="NoteD" routerLink="/Dashboard/Archive">
+                        <div role="button" class="NoteD" routerLink="/Dashboard/Archieve">
                             <div class="NoteDiv">
                                 <span class="material-symbols-outlined">archive</span>
                             </div>
