--- a/src/app/Component/display-note/display-note.component.scss
+++ b/src/app/Component/display-note/display-note.component.scss
@@ -1,28 +1,38 @@
-.OuterDiv{
-    width: 400px;
-    padding:25px 30px;
+.innDiv{
+    display: flex;
+    flex-wrap: wrap;
+    padding-inline-start: 60px;
+    :hover{
+        border-color:black;
+    }
+}
+.OutDiv {
+    width: 238px;
+    padding-top: 25px;
+    padding-bottom: 7px;
     border: 1px solid rgb(186, 184, 184);
     padding-right: 10px;
+    padding-left: 10px;
     border-radius: 8px;
-    box-sizing: border-box;
-    box-shadow: 0 1px 1px 1px  rgb(186, 184, 184);
+    box-shadow: 0 1px 1px 1px rgb(186, 184, 184);
+    margin: 8px;
 }
-.search{
+.search {
     height: 30px;
-     border: 0px transparent;
-     font-size: large;
-     background-color: transparent;
-     width: 100%;
-     margin: 0px;
-     padding: 2px 5px 7px 2px;
-     cursor: pointer;
+    border: 0px transparent;
+    font-size: large;
+    background-color: transparent;
+    width: 100%;
+    margin: 0px;
+    padding: 2px 5px 7px 2px;
+    cursor: pointer;
 }
-.mySearch
-{
+
+.mySearch {
     height: 30px;
     width: 100%;
     letter-spacing: .01428571em;
-    font-family: Roboto,Arial,sans-serif;
+    font-family: Roboto, Arial, sans-serif;
     font-size: .875rem;
     font-weight: 400;
     line-height: 1.25rem;
@@ -32,4 +42,26 @@
     min-height: 28px;
     padding: 2px 5px 7px 2px;
     cursor: pointer;
+}
+.OuterDiv{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 40px;
+}
+.add{
+    padding-top: 7px;
+    border: 1px;
+    margin: 0px;
+    cursor: pointer;
+    :hover{
+        border-radius: 40%;
+        background-color: #f1f3f4;
+    }
+}
+.divImg {
+    height: 24px;
+    width: 24px;
+    padding: 8px 5px;
+    margin: 3px;
 }
