--- a/src/app/Component/icon/icon.component.html
+++ b/src/app/Component/icon/icon.component.html
@@ -1,21 +1,36 @@
-<head>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
 <div class="OuterDiv">
     <div role="button" class="add">
-        <span aria-label="Remind me" class="material-symbols-outlined">add_alert</span>
+        <img class="divImg" src="../../../assets/person_add_FILL0_wght400_GRAD0_opsz48.svg">
     </div>
     <div role="button" class="add">
-        <span class="material-symbols-outlined">palette</span>
+        <img class="divImg" src="../../../assets/palette_FILL0_wght400_GRAD0_opsz48.svg">
     </div>
     <div role="button" class="add">
-        <span class="material-symbols-outlined">photo</span>
+        <img class="divImg" src="../../../assets/image_FILL0_wght400_GRAD0_opsz48.svg">
     </div>
     <div role="button" class="add">
-        <span class="material-symbols-outlined">archive</span>
+        <img class="divImg" src="../../../assets/image_FILL0_wght400_GRAD0_opsz48.svg">
     </div>
     <div role="button" class="add">
-        <span class="material-symbols-outlined">more_vert</span>
+        <img class="divImg" src="../../../assets/more_vert_FILL0_wght400_GRAD0_opsz48.svg">
     </div>
 </div>
+<!-- 
+<div role="button" class="add">
+    <img class="divImg" src="../../../assets/notifications_FILL0_wght400_GRAD0_opsz48.svg">
+</div>
+<div role="button" class="add">
+    <img class="divImg" src="../../../assets/person_add_FILL0_wght400_GRAD0_opsz48.svg">
+</div>
+<div role="button" class="add">
+    <img class="divImg" src="../../../assets/palette_FILL0_wght400_GRAD0_opsz48.svg">
+</div>
+<div role="button" class="add">
+    <img class="divImg" src="../../../assets/image_FILL0_wght400_GRAD0_opsz48.svg">
+</div>
+<div role="button" class="add">
+    <img class="divImg" src="../../../assets/notifications_FILL0_wght400_GRAD0_opsz48.svg">
+</div>
+<div role="button" class="add">
+    <img class="divImg" src="../../../assets/more_vert_FILL0_wght400_GRAD0_opsz48.svg">
+</div> -->
