--- a/src/app/Component/trash/trash.component.html
+++ b/src/app/Component/trash/trash.component.html
@@ -2,6 +2,7 @@
 <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="20px">
 <app-display-note [notesArray]="trashList" (ChangeColorOfNote)="trash($event" (changeColorOfNote)="restoreNote($event"></app-display-note>
 </div>
-</div> -->
+</div> 
 
-<app-display-note [noteArr]="trashList"></app-display-note>
+<app-display-note [noteArr]="trashList"></app-display-note>-->
+
